zooming and selecting residues

--- a/disastr_plugin.html
+++ b/disastr_plugin.html
@@ -1,28 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
+<meta charset="utf-8">
+
 <title>DisaStr plugin</title>
 <script src="http://3Dmol.csb.pitt.edu/build/3Dmol-min.js"></script>
 <script src="disastr_plugin.js"></script>
 
 <!--  <script src="../build/3Dmol.js"></script> /-->
 
+<!-- CSS /-->
 <style>
-head, body {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	max-height: 100vh
-}
+  .article {
+     width: 100%;
+     background-color: #d7d7d7;
+     height: 80vh;
+  }
+ .col-1 {
+    width: 50%;
+    background-color: #ffffff;
+    height: 80vh;
+    float: left;
+ }
+ .col-2 {
+    width: 50%;
+    background-color: #fff8ff;
+    height: 80vh;
+    float: right;
+ }
 </style>
 
-</head>
 <body>
-	<div id="gldiv" style="width: 100%; height: 80vh; margin: 0; padding: 0; border: 0;"></div>
+	<div class="article">
+		<div id="gldiv" class="col-1"></div>
+		<div id="selediv" class="col-2"></div>
+	</div>
 
 	<hr style="margin: 2;">
-
-	<br>
 	<input type="button" value="Stick"
 		onclick="glviewer.setStyle({},{stick:{}}); glviewer.render();"></input>
 	<input type="button" value="Line"
@@ -40,4 +51,3 @@ head, body {
 	<br>
 
 </body>
-</html>
