colours and few minor changes

--- a/disastr_plugin.html
+++ b/disastr_plugin.html
@@ -54,7 +54,7 @@
 	<input type="button" value="Cartoon" class='button'
 		onclick="set_custom_cartoon(glviewer);"></input>
 	
-	<input type="button" value="Color SS" class='button'
+	<input type="button" value="Colour SS" class='button'
 		onclick="colorSS(glviewer);"></input>
 
 	<input type="button" value="Recenter" class='button' 
