Some final cuts

--- a/disastr_plugin.html
+++ b/disastr_plugin.html
@@ -20,9 +20,10 @@
  }
  .col-2 {
     width: 50%;
-    background-color: #fff8ff;
+    background-color: #ffffff;
     height: 80vh;
     float: right;
+    overflow-y: scroll;
  }
  .button {
  	width: 80px;
@@ -42,7 +43,7 @@
 
 	<!-- Buttons /-->
 
-	<input type="button" value="Stick" class='button'
+	<!-- <input type="button" value="Stick" class='button'
 		onclick="set_custom_stick(glviewer);"></input>
 
 	<input type="button" value="Line" class='button'
@@ -51,11 +52,11 @@
 	<input type="button" value="Sphere" class='button'
 		onclick="set_custom_sphere(glviewer);"></input>
 
-	<input type="button" value="Cartoon" class='button'
-		onclick="set_custom_cartoon(glviewer);"></input>
+	 <input type="button" value="Cartoon" class='button'
+		onclick="set_custom_cartoon(glviewer);"></input> 
 	
-	<input type="button" value="Colour SS" class='button'
-		onclick="colorSS(glviewer);"></input>
+	 <input type="button" value="Colour SS" class='button'
+		onclick="colorSS(glviewer);"></input> /-->
 
 	<input type="button" value="Recenter" class='button' 
 		onclick="glviewer.zoomTo();"></input>
